# semantic-dark

./: .gitignore  BENCHMARK.md  PLAN.md  PRIVACY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: verify.yml
artifacts/paired-theme/: m1-baseline.v1.html  m1-baseline.v1.json
docs/: M1-REPORT.md  METRIC-SPEC-v1.md
extension/: manifest.json  popup.css  popup.html  prepaint.css  raster-worker-host.html
fixtures/evaluation/: m0-manifest.schema.json  m0-manifest.v1.json  metric-spec.schema.json  metric-spec.v1.json
fixtures/integration/: fixture.css  index.html  native-dark.css  native-dark.html
fixtures/paired-theme/: carbon-v1.protocol.json  common-scenes.v1.json  fluent-v1.protocol.json  material-v1.protocol.json  primer-v1.protocol.json  spectrum-v1.protocol.json
ml/: .gitignore  README.md  pyproject.toml  sources.v1.json
ml/src/semantic_dark_ml/: __init__.py  checkpoint.py  cli.py  corpus_validation.py  hf_source.py  http.py  images.py  manifest.py  model.py  model_eval.py  npm_source.py  onnx_export.py  ontology.py  open_set.py  paths.py  sampling.py  source_config.py  split_validator.py  synthetic.py  torch_data.py  training.py
ml/tests/: test_hf_source.py  test_http.py  test_manifest.py  test_model_optional.py  test_npm_source.py  test_split_and_open_set.py  test_synthetic_optional.py
scripts/: benchmark-vision.ts  build.mjs  e2e.mjs  feature-router.ts  paired-theme-heldout.ts  paired-theme.ts
src/: main-world.ts  popup.ts  service-worker.ts  types.ts
src/color/: composite.ts  (+9 more)
(+160 files in other folders)
